# mrsep

./: README.md
data/: README
data/Borrelia/: README
data/Borrelia/MLST_19032019/: README  clpA_muscle.clw  clpA_muscle.fasta  clpX_muscle.clw  clpX_muscle.fasta  nifS_mafft.fasta  nifS_muscle.clw  (+14 more)
dev/: README
dev/filters/: default.nix  notebook.ipynb  notebook.sh  pkgs.nix  plots.py  stats-01.txt  stats-100.txt  stats-150.txt  stats-200.txt
dev/gurobi_mrsep/: Input.hh  README.md  default.nix  gurobiSolve.hh  main.cc  read_mappings.txt
dev/simulation/: README.md  art.nix  default.nix  pkgs.nix  run.sh
doc/notes/: algo_glouton.txt  algo_glouton_desc.txt  problem_def.tex  references.bib
doc/papers/: README
exp/: README  README_structure
exp/01062019_simulation_mrsep_ilp_epsilon/: README.md  data  default.nix  notebook.sh  results-000-no-weights.tar.xz  results-000.tar.xz  results-001.tar.xz  results-002.tar.xz  results-003.tar.xz  results-004-null-const-filters.tar.xz  results-004-null-filter.tar.xz  run.sh
exp/04-06-2019-savage-vgflow-kallisto/: generate_data_1.sh  generate_data_2.sh  run_kallisto_1.sh  run_kallisto_2.sh
exp/19052019_simulation_coverage_statistics/: README.md  art.nix  default.nix  notebook.sh  run.sh
exp/21032019_analysis_Borrelia_MLST_scheme/: README
src/: README
src/mrsep.ilp/: README.md  build.sh  default.nix
src/mrsep.ilp/test/: README.md  default.nix  mrsep-test.cabal  run.sh
src/mrsep.ilp/test/src/: Allele.hs  Input.hs  Main.hs  Mapping.hs  Read.hs  Run.hs  Solve.hs  Test.hs
src/simulation/: default.nix  run.sh
(+138 files in other folders)
