name: mrsep-test
version: 0.1.0.0
license: OtherLicense
author: Timothée Jourde
maintainer: timothee.jourde@u-bordeaux.fr
category: Testing
build-type: Simple
cabal-version: >=1.10

executable mrsep-test
  main-is: Main.hs

  ghc-options:
    -O2
    -threaded          
    
  other-modules:
    Allele
    Read
    Mapping
    Input
    Run
    Solve
    Test
    
  build-depends:
    base, containers,
    vector, process, async, stm,
    MonadRandom, random-shuffle
    
  hs-source-dirs: src
  default-language: Haskell2010
